fix review count overflowing off-screen

--- a/kw_webapp/static/css/styles.css
+++ b/kw_webapp/static/css/styles.css
@@ -6,5 +6,6 @@
 #reviews-left {
   float: right;
   margin-right: 0;
-  width: 52px;
+  width: 75px;
+  text-align: right;
 }
